Page MenuHome GnuPG

Kleopatra: Remove obsolete EMail Operations configuration
Closed, ResolvedPublic

Description

Just noticed that under Crypto Operations in Kleopatra settings there are still EMail Operations listed. This might be confusing because the settings are not used in any EMail program afaik. They were used in the Assuan / EMail Commands which were used from Outlook.

Event Timeline

aheinecke triaged this task as Normal priority.Jan 3 2023, 12:20 PM
aheinecke created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Jan 9 2023, 11:50 AM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a subscriber: ikloecker.

Removed.

For the clipboard operations (encrypt and sign) we store the user's decision to keep the results open after the operation was completed. These settings cannot be changed in the UI currently.

aheinecke claimed this task.

Good solution. I tested it.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 2:48 PM