Add separate settings for showing results after clipboard operation

The email operations settings are going away because Kleopatra isn't used
anymore for email operations. We still want to keep settings to keep
the results open after signing or encrypting the clipboard.

GnuPG-bug-id: 6327